--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          version="3.0">
 
 	<filter>
-		<filter-name>SparkFilter</filter-name>
+		<filter-name>SparkFilter ok</filter-name>
 		<filter-class>spark.servlet.SparkFilter</filter-class>
 		<init-param>
 			<param-name>applicationClass</param-name>
